kubernetes/infrastructure/kyverno/base/policies/require-labels.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-labels
  annotations:
    policies.kyverno.io/title: Require Labels
    policies.kyverno.io/category: Best Practices
    policies.kyverno.io/severity: low
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      This policy ensures that all pods have required labels for better organization and management of resources.
spec:
  validationFailureAction: audit
  background: true
  rules:
    - name: check-labels
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        message: 'Required labels are missing'
        pattern:
          metadata:
            labels:
              app: '?*'
              environment: '?*'
              team: '?*'
